2014-05-17  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: If Pc of OSC 52 is 'p' and "use_clipboard" option is true,
	  clipboard is disabled temporarily.

2014-05-17  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.c: If Pc of OSC 52 is 'c' and "use_clipboard"
	  option is false, clipboard is enabled temporarily.

	* ml_drcs.[ch], ml_vt100_parser.[ch], x_screen.c: Each pty has its own drcs database.

	* c_sixel.c: Fix http://twitter.com/kefir_/status/467340224628924416

	* ml_pty.c: Minor hack is added to ml_pty_get_slave_name().

2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* x_im_{candidate|status}_screen.c: Calculating appropriate size of input
	  method window in draw_screen() is skipped if window_exposed() calls it.

2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* x_im_{candidate|status}_screen.c: x_window_move_no_expose() is removed.

	* fb/x_window.c: x_window_move() works same as x_window_move_no_expose()
	  for the input method window, and x_window_move_no_expose() is removed.

	* fb/x_display.[ch]:
	  - x_display_check_visibility_of_im_window() becomes static and renamed
	    to check_visibility_of_im_window().
	  - x_display_reset_input_method_window() is added.

2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: clear_margin_area() is called in x_window_resize() which
	  is called from x_im_{status|candidate}_screen.c

2014-05-11  Araki Ken  <arakiken@users.sf.net>

	* x_display_linux.c:
	  - strstr() in get_event_device_num() is replaced by strcasestr().
	  - If get_event_device_num() doesn't find kbd or mouse input event
	    devices, it returns the default number of kbd or mouse device
	    instead of -1.

	* fb/x_window.c: x_display_check_visibility_of_im_window() is called
	  not only from x_window_move() but also from x_window_resize().

	* fb/x_display.c: The bug of clearing input method window unexpectedly
	  in receive_event_for_multi_roots() is fixed.
